--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,46 +18,37 @@ services:
   # Mock services for testing
   user-service:
     build:
-      context: .
+      context: ./mock/user-service
       dockerfile: Dockerfile
     container_name: user-service
-    restart: unless-stopped
     ports:
       - "3001:3000"
     environment:
-      - NODE_ENV=development
       - PORT=3001
-    command: sh -c "node dist/src/services/users/main.js"
     networks:
       - gateway-network
 
   product-service:
     build:
-      context: .
+      context: ./mock/products-service
       dockerfile: Dockerfile
     container_name: product-service
-    restart: unless-stopped
     ports:
       - "3002:3000"
     environment:
-      - NODE_ENV=development
       - PORT=3002
-    command: sh -c "node dist/src/services/products/main.js"
     networks:
       - gateway-network
 
   order-service:
     build:
-      context: .
+      context: ./mock/orders-service
       dockerfile: Dockerfile
     container_name: order-service
-    restart: unless-stopped
     ports:
       - "3003:3000"
     environment:
-      - NODE_ENV=development
       - PORT=3003
-    command: sh -c "node dist/src/services/orders/main.js"
     networks:
       - gateway-network
 
